--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
 <br><br><br><br><br><br><br><br><br><br><br>
 <section id="extra">
 <div id="blackboxdiv" >
-<p id="blackboxp" class="wow bounceInLeft" style="width: 100rem;">Extracurricular and Co-curricular activities:<br><ul><li>Member of the TECH CAMP of the Software Engineering Association.</li><br><li>Won 1st position in Mad Ads in Elektra 2K17 organised by EEE Department</li><br><li>Member of organising committee of Code Enigma (South zone level coding competition).</li><br><li>Anchor for the Departmental Orientation 2017.</li></ul></p></div><br><br><br><br><br></section>
+<p id="blackboxp" class="wow bounceInLeft" style="width: 100rem;">Extracurricular and Co-curricular activities:<br><ul><li><b>Web Developer </b>at Fusion Era</li><br><li><b>Member of the TECH CAMP</b> of the Software Engineering Association.</li><br><li><b>Former Web and App developer</b> at Camber Racing</li><br><li>Bagged<b> 1st position</b> in Mad Ads in Elektra 2K17 organised by EEE Department</li><br><li><b>Member of organising committee</b> of Code Enigma (South zone level coding competition).</li><br><li><b>Anchor </b>for the Departmental Orientation 2017.</li><br><li><b>Anchor </b>for National Workshop on Cyber Security 2017.</li></ul></p></div><br><br><br><br><br></section>
 
 
-<section id="projects">
+<!-- <section id="projects">
 <h1 style="text-align: center; font-family: Helvetica, Arial, sans-serif; font-size: 200%"> <strong> projects</strong></h1>
 <div class="container-fluid">
 <div class="row">
@@ -125,7 +125,13 @@
 <div class="col-md-4 col-sm-6 wow fadeInUp" style="height: 300px"><p style="font-size: 200%"><img src="fateh.png" class="img-responsive img-circle centered " height="300px" width="300px" style="margin: 0 auto;">  <strong><a href="https://shubhampotdar.github.io/hbdfateh.github.io/" target="_blank">Birthday Site (non-responsive)</a></strong></p></div>
 <div class="col-md-4 col-sm-6 wow fadeInUp" style="height: 300px"><p style="font-size: 200%"><img src="balaji.png" class="img-responsive img-circle centered " height="300px" width="300px" style="margin: 0 auto;"><br>  <strong><a href="https://shubhampotdar.github.io/BalajiResidency" target="_blank">Landing Page</a></strong></p></div>
 </div>
-</section>
+</section> -->
+
+<section id="projects">
+<div id="blackboxdiv" >
+<p id="blackboxp" class="wow bounceInLeft" style="width: 100rem;">Projects<br><ul><li><a href="shubhampotdar.github.io/sweatask">shubhampotdar.github.io/sweatask</a></li><br><li><a href="https://shubhampotdar.github.io/hitsathon/tiop.html">https://shubhampotdar.github.io/hitsathon/tiop.html</a></li><br><li><a href="https://shubhampotdar.github.io/BalajiResidency/">https://shubhampotdar.github.io/BalajiResidency/</a></li><br><li><a href="http://happybirthdayfateh.tk/">http://happybirthdayfateh.tk/</a></li><br><li>Other Projects at: <a href="https://github.com/shubhampotdar">https://github.com/shubhampotdar</a></li></ul></p></div><br><br><br><br><br></section>
+
+
 
 
 <br><br><br><br><br><br><br><br><br><br>
